--- a/work19/index1.css
+++ b/work19/index1.css
@@ -1,15 +1,14 @@
-.progress {
-    display:inline-block;
-    widows: 200px;
+.progress{
+    display: inline-block;
+    width: 200px;
     height: 8px;
     border-radius: 4px;
     border: 1px solid #ccc;
     line-height: 4px;
     margin-right: 5px;
-    padding: 2px;    
+    padding: 2px;
 }
-
-.progress i{
+.progress i {
     display: inline-block;
     width: 0%;
     height: 100%;
